tests/ui/traits/vtable/vtable-multiple.stderr
error: vtable entries for `<S as C>`: [
           Method(<S as A>::foo_a),
           Method(<S as B>::foo_b),
           TraitVPtr(<S as B>),
           Method(<S as C>::foo_c),
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
       ]
  --> $DIR/vtable-multiple.rs:16:1
   |
LL | trait C: A + B {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as B>`: [
           Method(<S as B>::foo_b),
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
       ]
  --> $DIR/vtable-multiple.rs:10:1
   |
LL | trait B {
   | ^^^^^^^

error: aborting due to 2 previous errors

